# django-aws-mail

./: .coverage  .gitignore  README.md  README.rst  example.env  manage.py  pyproject.toml  release.txt
.github/workflows/: publish.yml
django_aws_mail/: __init__.py  backends.py  config.py  message.py  models.py  parsers.py  settings.py  utils.py  verifier.py  views.py
django_aws_mail/tests/: test_backend.py  test_handlers.py  test_message.py  test_models.py  test_parsers.py  test_utils.py  test_verifier.py  test_views.py
sandbox/: settings.py  urls.py  wsgi.py
sandbox/templates/email/: test.html
