[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "django-aws-mail"
license = "MIT"
version = "0.4.4"
description = "AWS mail for Django using SES and SNS."
keywords = ["amazon", "mail", "aws", "ses", "sns", "django"]
authors = [
    { name = "Bas van Gaalen", email = "webtweakers@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.12"

dependencies = [
    "django (>=5.1.2)",
    "boto3 (>=1.0.0)",
    "cryptography (>=43.0.3)",
    "requests (>=2.32.1)",
    "django-json-widget (>=2.0.1)",
]


[tool.poetry]
packages = [{include = "django_aws_mail"}]
include = ["sandbox", "example.env", "LICENSE", "README.rst"]


[project.scripts]
manage = "sandbox.manage:main"


[project.urls]
Repository = "https://github.com/django-aws-mail/django-aws-mail"
